--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rest-api",
+  "name": "rest-api for web scrapping",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
